# grustnify

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-appimage.sh
assets/icons/: AppIcon.icns
cmake/: FetchDependencies.cmake  toolchain-windows-clang.cmake
src/: CMakeLists.txt
src/app/: app.cpp  app.hpp  main.cpp
src/core/: audio_buffer.cpp  audio_buffer.hpp  audio_decoder.cpp  audio_decoder.hpp  audio_encoder.cpp  audio_encoder.hpp
src/log/: log.cpp  log.hpp
src/ui/: main_window.cpp  main_window.hpp
tests/: CMakeLists.txt  test_audio_decoder.cpp
